# sesh

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: settings.json
.claude/hooks/: check_release_version.py
.plans/: README.md
.plans/active/: 2026-02-22-pr1-first-tui-improvements.md  2026-02-22-test-suite-rollout.md  2026-05-17-aggregation-ripgrep.md  2026-07-05-claude-subagents.md  2026-07-10-reading-navigation-rollout.md
.plans/done/: 2026-02-22-fullscreen-and-help.md  2026-02-22-test-suite-rollout.md  2026-06-28-html-view-and-export.md  2026-07-10-live-browser-view.md  2026-07-10-reading-navigation-rollout.md  2026-07-11-codex-subagents.md  2026-07-11-sesh-doctor.md  2026-07-12-active-branch-reconstruction.md
src/sesh/: __init__.py  __main__.py  app.py  bookmarks.py  cache.py  cli.py  diagnostics.py  discovery.py  export.py  liveview.py  models.py  move.py  paths.py  preferences.py  resume.py  search.py  transcript.py  transcript_view.py  viewcache.py
tests/: conftest.py  helpers.py  test_provider_parsing.py
tests/integration/: test_cli_aggregation.py  test_cli_json_endpoints.py  test_search_with_real_rg.py  test_textual_app_smoke.py  test_transcript_find.py  test_transcript_reading.py
tests/unit/: test_app_delete_logic.py  test_app_helpers.py  test_bookmarks.py  test_cache.py  test_cli_commands.py  test_cli_doctor.py  test_cli_main_dispatch.py  test_cli_snapshot.py  test_cli_stats.py  test_diagnostics.py  test_discovery.py  test_discovery_aggregation.py  test_export.py  test_liveview.py  test_models.py  test_move_orchestrator.py  test_paths.py  test_preferences.py  test_provider_branches.py  test_provider_claude_metadata.py  test_provider_claude_move.py  test_provider_claude_subagents.py  test_provider_codex_indexing.py  test_provider_codex_move.py  (+27 more)
(+17 files in other folders)
