[project]
name = "sesh"
version = "0.1.0"
description = "Browse and search Claude Code, Codex, and Cursor sessions in the terminal"
requires-python = ">=3.10"
dependencies = ["textual>=0.89.0"]

[project.scripts]
sesh = "sesh.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sesh"]
