[project]
name = "sesh"
version = "0.4.0"
description = "Browse and search Claude Code, Codex, and Cursor sessions in the terminal"
license = "MIT"
readme = "README.md"
authors = [{ name = "David Darmon" }]
requires-python = ">=3.10"
dependencies = ["textual>=0.89.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]

[project.scripts]
sesh = "sesh.cli:main"

[project.urls]
Repository = "https://github.com/ddarmon/sesh"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sesh"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "integration: tests requiring real rg binary or Textual pilot",
    "requires_rg: tests that need ripgrep on PATH",
]
